fix(layout): Disable overflow element

--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,8 @@ body {
   -ms-flex-align: center;
   display: flex;
   align-items: center;
-  justify-content: center
+  justify-content: center;
+  overflow-y: hidden;
 }
 
 .Title {
